feat: support document drag drop binding
